--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "DOM",
       "es6",
       "DOM.Iterable",
-      "ScriptHost"
+      "ScriptHost",
+      "ESNext"
     ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
     // "jsx": "preserve",                                /* Specify what JSX code is generated. */
     // "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
