--- a/package.json
+++ b/package.json
@@ -1,34 +1,43 @@
 {
-  "name": "typescriptfromzeroudemy",
-  "version": "1.0.0",
-  "description": "Learn Typescript from Max in Udemy.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server",
-    "build": "webpack --config webpack.config.prod.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rhythm244/typescriptFromZeroUdemy.git"
-  },
-  "author": "Thong",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rhythm244/typescriptFromZeroUdemy/issues"
-  },
-  "homepage": "https://github.com/rhythm244/typescriptFromZeroUdemy#readme",
+  "name": "app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "lite-server": "^2.6.1",
-    "lodash": "^4.17.21"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.20",
+    "@types/react": "^18.0.29",
+    "@types/react-dom": "^18.0.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@types/lodash": "^4.14.191",
-    "clean-webpack-plugin": "^4.0.0",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.2",
-    "webpack": "^5.76.2",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.1"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
